<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>pixels</artifactId>
        <groupId>io.pixelsdb</groupId>
        <version>0.2.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>pixels-daemon</artifactId>
    <name>pixels-daemon</name>
    <description>The daemon of Pixels that provides internal services.</description>

    <properties>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mainClass>io.pixelsdb.pixels.daemon.DaemonMain</mainClass>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-common</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-cache</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-core</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-localfs</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-hdfs</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-s3</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-retina</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-rocksdb</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-rockset</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-rocksdb</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-rockset</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>io.prometheus</groupId>
            <artifactId>simpleclient</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.prometheus</groupId>
            <artifactId>simpleclient_pushgateway</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>io.etcd</groupId>
            <artifactId>jetcd-core</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- trino-jdbc -->
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-jdbc</artifactId>
        </dependency>
        <!-- grpc -->
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty-shaded</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-protobuf</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-stub</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>secretsmanager</artifactId>
        </dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>ec2</artifactId>
        </dependency>
        <dependency>
            <!-- this is only for third-party libs that use slf4j -->
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-index-rocksdb</artifactId>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>pixels-daemon</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven.plugin.shade.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>pixels-daemon</finalName>
                            <outputDirectory>${project.parent.basedir}/pixels-daemon/target</outputDirectory>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>full</shadedClassifierName>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <!-- ServicesResourceTransformer merges the resources in META-INF/services -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${mainClass}</mainClass>
                                    <manifestEntries>
                                        <Add-Opens>java.base/sun.nio.ch java.base/java.nio</Add-Opens>
                                        <Multi-Release>true</Multi-Release>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.plugin.deploy.version}</version>
                <configuration>
                    <altDeploymentRepository>
                        local.mvn.repo::default::file://${project.parent.basedir}/mvn
                    </altDeploymentRepository>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.plugin.source.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugin.compiler.version}</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>